# yolov8_tensorrt_and_ros2

./: README.en.md  README.md
src/yolov8/: CMakeLists.txt  package.xml
src/yolov8/include/: config.h
src/yolov8/launch/: yolov8.launch.py
src/yolov8/src/: yolov8_det.cpp
